fix issues with images on iphone simulator

--- a/app/assets/stylesheets/_page-footer.scss
+++ b/app/assets/stylesheets/_page-footer.scss
@@ -56,6 +56,7 @@ div#page footer {
 		}
 	}
 	img#footerlogo {
-		margin: 20px auto;
+		margin: 20px 0;
+		width: 250px;
 	}
 }
