--- a/app/assets/stylesheets/_page-header.scss
+++ b/app/assets/stylesheets/_page-header.scss
@@ -1,5 +1,5 @@
 body div#page > header {
-	background: url('../images/olympia2012s.jpg') 5px 15px no-repeat;
+	background: url('../images/olympia2012s.jpg') 5px 17px no-repeat;
 	div#top {
 		span#subscription {
 			display:none;
