--- a/app/assets/stylesheets/_responsive.scss
+++ b/app/assets/stylesheets/_responsive.scss
@@ -383,6 +383,9 @@
 			header ul {
 				padding: 0 0 0 383px;
 			}
+			img#footerlogo {
+				width: 400px;
+			}
 		}
 	}
 }
